<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/map"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/saved"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/saved"
            android:title="@string/menu_setting" />

    </group>
</menu>